syntax = "proto3";

package api;

message Person {
  string FirstName = 1;
  string LastName = 2;
}

message AddResponse {
  int64 Count = 1;
}

message ListRequest {}
message ListResponse{
  repeated Person persons = 1;
}

service HR {
  rpc Add(Person) returns (AddResponse) {}
  rpc List(ListRequest) returns (ListResponse) {}
}
